syntax = "proto3";

package API;

option go_package = "goCodeINGithub/gRPC/bidirectionStreaming;bidirectionStreaming";

service UserManagement{
    rpc CreateNewUserUnary (NewUser) returns (User){}
    rpc CreateNewUser (stream NewUser) returns (stream User){}
}

message NewUser{
  string name = 1;
  int32 age = 2;
}

message User{
  string name = 1;
  int32 age = 2;
  int32 id = 3;
}

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative API/api.proto


